<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminNewUserActivity"
    android:background="@drawable/app_bg">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/admin_new_title"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toEndOf="@+id/admin_new_user_step_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/admin_new_user_step_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/admin_new_user_save_gui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/save_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="512dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/admin_user_fullname_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/profile_fullname"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/admin_user_department_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@android:drawable/editbox_background"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:drawablePadding="16dp"
            android:hint="@string/admin_new_user_department"
            android:padding="10dp"
            android:textSize="23sp" />


        <EditText
            android:id="@+id/admin_user_email_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/profile_email"
            android:inputType="textEmailAddress"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/admin_user_county_dropdown_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@android:drawable/editbox_background"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:drawablePadding="16dp"
            android:hint="@string/admin_new_user_county"
            android:padding="10dp"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/admin_user_password_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/profile_password"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/admin_user_password_confirm_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/profile_edit_confirm"
            android:textSize="23sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>