<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/app_bg">

    <ImageView
        android:id="@+id/login_settings_gui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/admin_icon" />

    <ProgressBar
        android:id="@+id/login_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="220dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/login_title"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_email_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/mail_icon"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/login_email_txt"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/login_password_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/login_password_txt"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/login_login_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/transparent_blue"
            android:text="@string/login_button_txt" />

        <CheckBox
            android:id="@+id/login_stay_logged_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Maradjak bejelentkezve" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>